# pippin

./: .gitignore  AUTHORS.md  Cargo.toml  LICENSE-ISC.txt  Makefile  README.md  TODO  scrap.rs
app_tests/: Cargo.toml
app_tests/data/seq_small/: data-ss0-cl0.piplog  data-ss0-cl1.piplog  data-ss0-cl2.piplog  data-ss0.pip  data-ss1-cl0.piplog  data-ss1-cl1.piplog  data-ss1.pip  pn1-ss0-cl0.piplog  pn1-ss0-cl1.piplog  pn1-ss0-cl2.piplog  pn1-ss0.pip  pn1-ss1-cl0.piplog  pn1-ss1-cl1.piplog  pn1-ss1.pip
app_tests/examples/: sequences.rs
app_tests/src/: lib.rs  seq.rs
app_tests/tests/: seq_create_small.rs
applications/: Cargo.toml  app_tests_lib.rs
applications/examples/: demo-example.rs  sequences.rs
applications/tests/: demo-test.rs
doc/: TODO  api-requirements.md  classification-maths.md  disk-layout-notes.md  enhancements.md  file-format.md  identifiers.md  log-files.md  log-requirements.md  milestones.md  partitioning-alternatives.md  partitioning.md  reasoning.md  repo-files.md  requirements.md  technical-decisions.md
doc/blog/: 2017-07-22-goodbye-partitioning.md  README.md
doc/tickets/: 0003-checksum-and-history  0004-sync-support  0005-merge-support  0006-partial-partitioning  0007-full-partitioning  0008-compression-support  0009-encryption  0010-data-rescue  0011-error-handling  0012-log-extension  0013-testing  0014-custom-element-structures  0015-usize-casts  0016-file-formats  0017-warnings  0018-rust-issues  0019-performance  0020-state-identifiers  0021-commit-creation  0022-paranoid-mode  0023-API-privacy  0024-identifying-partitions  0025-flexible-IO-options  0026-partition-numbers  0027-additional-info  0028-checksum-algorithm  0029-snapshot-parents  README.md
doc/tickets/closed/: 0001-store-and-load  0002-store-with-history  0006-partial-partitioning  0014-custom-element-structures
examples/: hello.rs  pippincmd.rs  sequences-single.rs  sequences.rs
src/: classify.rs  commit.rs  control.rs  discover.rs  elt.rs  error.rs  fileio.rs  hashindexed.rs  lib.rs  merge.rs  part.rs  part_traits.rs  pip.rs  repo.rs  repo_traits.rs  state.rs  states.rs  sum.rs  util.rs
src/detail/: classifier.rs  commit.rs  commits.rs  discover.rs  element.rs  elt.rs  header.rs  merge.rs  mod.rs  part.rs  partition.rs  repo.rs  repo_traits.rs  snapshot.rs  states.rs  sum.rs
src/detail/readwrite/: commitlog.rs  header.rs  mod.rs  snapshot.rs  sum.rs
src/io/: discover.rs  file.rs  mod.rs
src/readwrite/: commitlog.rs  header.rs  mod.rs  snapshot.rs  sum.rs
src/repres/: mod.rs  sum.rs
src/rw/: commitlog.rs  header.rs  mod.rs  snapshot.rs  sum.rs
tests/: partition-ops.rs  test-suite.rs
