# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "pippin"
version = "0.0.0"
authors = ["Diggory Hardy <github1@dhardy.name>"]

[dependencies]

# We need a SHA2 implementation:
rust-crypto = "*"
# possible alternatives: sha, shaman

# For timestamps in commits/files.
chrono = "*"

# This might make calculating "state sums" faster.
# Not yet stable, and not essential:
# simd = "*"

# For reading and writing binary numbers with fixed endianness.
byteorder = "*"

# Data structure used internally.
hashindexed = "*"

# Used to match paths in the 'discover' module.
regex = "*"

# Container seems like the best match for the job. There isn't any strong
# reason to choose this over libstd containers however.
vec_map = "*"

# Used by `PartitionState::gen_id()` and the 'sequences' example
rand = "*"

# For the 'discover' module
walkdir = "*"

# Dependencies for examples below
[dev-dependencies]

# Command-line option handling for the examples:
docopt = "*"
rustc-serialize = "*" # for docopt
