[package]
name = "pippin_app_tests"
version = "0.0.0"
authors = ["Diggory Hardy <git@dhardy.name>"]

description = "Examples and test suites for Pippin, including support code"
license = "MPL-2.0"

[lib]
name = "pippin_app_tests"

[dependencies]
pippin = { path = ".." }
byteorder = "0.5"
docopt = "0.6"
rustc-serialize = "0.3" # for docopt
log = "0.3"
env_logger = "0.3"
rand = "0.3"
