[package]
authors = ["Diggory Hardy <git@dhardy.name>"]
name = "pippin_app_tests"
version = "0.0.0"

[lib]
name = "pippin_app_tests"
path = "app_tests_lib.rs"

[dependencies]
pippin = { path = ".." }
byteorder = "0.5"
docopt = "0.6"
rustc-serialize = "0.3" # for docopt
log = "0.3"
env_logger = "0.3"
rand = "0.3"
